5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1646_2724.log
== TEST (2019-04-11 16:45:59) 
-- CODE:
num1 = int(input("Digite o numero: ")) 
num2 = int(input("Digite o numero: ")) 
num3 = int(input("Digite o numero: ")) 

medio = (a + b +c) - minimo - maximo

if(medio == num1):
	msg = num1
if(medio == num2):
	msg = num2
if(medio == num3):
	msg = num3

print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    medio = (a + b +c) - minimo - maximo
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:03) 
-- CODE:
num1 = int(input("Digite o numero: ")) 
num2 = int(input("Digite o numero: ")) 
num3 = int(input("Digite o numero: ")) 

medio = (a + b +c) - minimo - maximo

if(medio == num1):
	msg = num1
if(medio == num2):
	msg = num2
if(medio == num3):
	msg = num3

print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    medio = (a + b +c) - minimo - maximo
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:19) 
-- CODE:
num1 = int(input("Digite o numero: ")) 
num2 = int(input("Digite o numero: ")) 
num3 = int(input("Digite o numero: ")) 

medio = (num1 + num2 + num3) - minimo - maximo

if(medio == num1):
	msg = num1
if(medio == num2):
	msg = num2
if(medio == num3):
	msg = num3

print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    medio = (num1 + num2 + num3) - minimo - maximo
NameError: name 'minimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:56) 
-- CODE:
num1 = int(input("Digite o numero: ")) 
num2 = int(input("Digite o numero: ")) 
num3 = int(input("Digite o numero: ")) 
minimo = min(num1,num2,num3)
maximo = max(num1,num2,num3)
medio = (num1 + num2 + num3) - minimo - maximo

if(medio == num1):
	msg = num1
if(medio == num2):
	msg = num2
if(medio == num3):
	msg = num3

print(msg)	
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:47:01) 
-- CODE:
num1 = int(input("Digite o numero: ")) 
num2 = int(input("Digite o numero: ")) 
num3 = int(input("Digite o numero: ")) 
minimo = min(num1,num2,num3)
maximo = max(num1,num2,num3)
medio = (num1 + num2 + num3) - minimo - maximo

if(medio == num1):
	msg = num1
if(medio == num2):
	msg = num2
if(medio == num3):
	msg = num3

print(msg)	
-- EXECUTION TIME:
0.198093
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
